@@ -1,48 +1,70 @@
 import java.io.*;
-import java.nio.charset.StandardCharsets;
 import java.nio.file.Files;
 import java.nio.file.Path;
-import java.nio.file.Paths;
 import java.util.*;
-import java.util.stream.Collectors;
-import java.util.stream.Stream;
 
 public class Memory {
 
-    public static void main(String[] args)  {
+    public static void main(String[] args) {
 
         Memory memory = new Memory();
-        memory.readFile();
+        //memory.readFile();
         board();
-
-
+        System.out.println("");
+        randomWord();
     }
-    public String readFile() {
-        //zmieniłem void na String
-        Path path = Paths.get("src/words/Words.txt");
+        public static String randomWord (){
+            List<String> listOfStrings = new ArrayList<String>();
+            String filename = "C:\\Users\\Jakub Szwaj\\IdeaProjects\\memory\\memory\\src\\words\\Words.txt";
+            try {
+                listOfStrings = Files.readAllLines(Path.of(filename));
+            } catch (IOException e) {
+                throw new RuntimeException(e);
+            }
+
+            String[] array = listOfStrings.toArray(new String[0]);
+
+            Random random = new Random();
+
+            int index = random.nextInt(array.length);
+            System.out.println(array[index]);
+
+            return array[index];
+        }
+
+
+        /*for (String eachString : array){
+            System.out.println(eachString);
+        }*/
+
+
+    /*public void readFile() {
+
+        Path path = Paths.get("C:\\Users\\Jakub Szwaj\\IdeaProjects\\memory\\memory\\src\\words\\Words.txt");
         ArrayList<String> result = new ArrayList<>();
 
-        try (Stream<String> st = Files.lines(path, StandardCharsets.UTF_8)){
+        try (Stream<String> st = Files.lines(path, StandardCharsets.UTF_8)) {
             Random random = new Random();
-            //st.collect(Collectors.toList()).size();
+            st.toList().size();
 
-//            for (int i = 0; i< st.toList().size(); i++){
-//                st.forEach(System.out::println);
-//
-//            }
-            //st.forEach(System.out::println);
+            for (int i = 0; i < st.toList().size(); i++) {
+                st.forEach(System.out::println);
 
-            for(int i = 0; i < st.toArray().length; i++){
+            }
+            st.forEach(System.out::println);
+
+           *//* for (int i = 0; i < st.toArray().length; i++) {
                 st.toList().get(random.nextInt(st.toArray().length));
             }
             int randomIndex = (int) (Math.random() * st.toList().size());
-            return st.toList().get(randomIndex);
+            return st.toList().get(randomIndex);*//*
 
         } catch (IOException ex) {
             System.out.println("Unable to read" + path);
-        }
+        */
 
-    }
+
+
     public static void board(){
         for (int i = 0; i < 2; i++) {
             if (i == 0) {
@@ -54,8 +76,6 @@ public class Memory {
                 System.out.print("X");
             }
         }
-
-
     }
 
 }
